Fixes Logo and Menu Page Dark Mode

--- a/src/utils/ThemeSwitcher.css
+++ b/src/utils/ThemeSwitcher.css
@@ -22,4 +22,11 @@ body.dark-mode {
     color: #000000; /* Example text color for light mode */
     /* Add any other styles specific to light mode */
   }
+
+  .light-mode-menu {
+    /* Define your light mode styles here */
+    background-color: #ffffff; /* Example background color for light mode */
+    color: #000000; /* Example text color for light mode */
+    /* Add any other styles specific to light mode */
+  }
   
